--- a/app/src/main/res/screens/study/layout/fragment_study.xml
+++ b/app/src/main/res/screens/study/layout/fragment_study.xml
@@ -32,7 +32,7 @@
         android:clickable="true"
         android:focusable="true"
         android:scaleType="centerCrop"
-        android:src="@drawable/ic_add" />
+        android:src="@drawable/ic_next" />
 
     <!--==============================
            Fab back
