--- a/app/src/main/res/screens/study_format/layout/fragment_study_format.xml
+++ b/app/src/main/res/screens/study_format/layout/fragment_study_format.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    app:layoutDescription="@xml/study_format_scene">
 
     <!--==============================
            TextView format question
@@ -15,9 +15,7 @@
         android:gravity="center"
         android:text="Формат ЗАПИТАННЯ"
         android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@id/tv_question_word"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textStyle="bold" />
 
     <!--==============================
            TextView question word
@@ -26,19 +24,13 @@
         android:id="@+id/tv_question_word"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_margin="30dp"
         android:background="@drawable/fab_state"
         android:clickable="true"
         android:focusable="true"
         android:gravity="center"
         android:text="СЛОВА"
         android:textSize="20sp"
-        android:textStyle="bold|italic"
-        app:layout_constraintBottom_toTopOf="@id/guideH_35"
-        app:layout_constraintDimensionRatio="1:1"
-        app:layout_constraintEnd_toStartOf="@id/tv_question_phrase"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textStyle="bold|italic" />
 
     <!--==============================
            CheckBox question work
@@ -47,12 +39,7 @@
         android:id="@+id/cb_question_word"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:buttonTint="@color/colorPrimary"
-        app:layout_constraintBottom_toBottomOf="@id/tv_question_word"
-        app:layout_constraintEnd_toEndOf="@id/tv_question_word"
-        app:layout_constraintStart_toStartOf="@id/tv_question_word"
-        app:layout_constraintTop_toTopOf="@+id/tv_question_word"
-        app:layout_constraintVertical_bias=".8" />
+        android:buttonTint="@color/colorPrimary" />
 
     <!--==============================
            TextView question phrase
@@ -61,19 +48,13 @@
         android:id="@+id/tv_question_phrase"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_margin="30dp"
         android:background="@drawable/fab_state"
         android:clickable="true"
         android:focusable="true"
         android:gravity="center"
         android:text="ФРАЗИ"
         android:textSize="20sp"
-        android:textStyle="bold|italic"
-        app:layout_constraintBottom_toTopOf="@id/guideH_35"
-        app:layout_constraintDimensionRatio="1:1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/tv_question_word"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textStyle="bold|italic" />
 
     <!--==============================
            CheckBox question translation
@@ -82,12 +63,7 @@
         android:id="@+id/cb_question_phrase"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:buttonTint="@color/colorPrimary"
-        app:layout_constraintBottom_toBottomOf="@id/tv_question_phrase"
-        app:layout_constraintEnd_toEndOf="@id/tv_question_phrase"
-        app:layout_constraintStart_toStartOf="@id/tv_question_phrase"
-        app:layout_constraintTop_toTopOf="@+id/tv_question_phrase"
-        app:layout_constraintVertical_bias=".8" />
+        android:buttonTint="@color/colorPrimary" />
 
     <!--==============================
            TextView format answer
@@ -99,9 +75,7 @@
         android:gravity="center"
         android:text="Формат ВIДПОВIДI"
         android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@id/guideH_35"
-        app:layout_constraintTop_toBottomOf="@id/tv_question_word" />
+        android:textStyle="bold" />
 
     <!--==============================
            Guide H 35
@@ -114,20 +88,12 @@
         app:layout_constraintGuide_percent=".35" />
 
     <!--==============================
-           Scroll H formats answers
-        ==============================-->
-
-    <!--==============================
-           Fab add
+           ScrollH answers
         ==============================-->
     <HorizontalScrollView
         android:id="@+id/scrollH_answers"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@id/fab_back"
-        app:layout_constraintTop_toBottomOf="@id/guideH_35"
-        app:layout_constraintVertical_bias="0.0"
-        tools:layout_editor_absoluteX="176dp">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:id="@+id/linearH_answers"
@@ -191,8 +157,8 @@
         android:clickable="true"
         android:elevation="5dp"
         android:focusable="true"
-        android:scaleType="centerCrop"
         android:src="@drawable/ic_back"
+        android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="parent"
@@ -201,4 +167,4 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.8"
         app:layout_constraintWidth_percent="0.15" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.motion.widget.MotionLayout>
