--- a/app/src/main/res/screens/studying/layout/fragment_studying.xml
+++ b/app/src/main/res/screens/studying/layout/fragment_studying.xml
@@ -33,16 +33,46 @@
         android:src="@drawable/ic_next" />
 
     <!--==============================
-           Fab back
+           Fab settings
         ==============================-->
     <ImageButton
-        android:id="@+id/fab_back"
+        android:id="@+id/fab_settings"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@drawable/fab_state"
         android:clickable="true"
         android:focusable="true"
+        android:padding="10dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/ic_back" />
+        android:src="@drawable/ic_settings" />
 
+    <!--==============================
+           TextView update words | phrase
+        ==============================-->
+    <TextView
+        android:id="@+id/tv_update_wp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/settings_state"
+        android:clickable="true"
+        android:focusable="true"
+        android:padding="5dp"
+        android:text="Змiнити слова/фрази"
+        android:textSize="15sp"
+        android:textStyle="bold" />
+
+    <!--==============================
+           TextView update format
+        ==============================-->
+    <TextView
+        android:id="@+id/tv_update_format"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/settings_state"
+        android:clickable="true"
+        android:focusable="true"
+        android:padding="5dp"
+        android:text="Змiнити формат вивчення"
+        android:textSize="15sp"
+        android:textStyle="bold" />
 </androidx.constraintlayout.motion.widget.MotionLayout>
