--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -128,6 +128,9 @@
             <action
                 android:id="@+id/action_studyFragment_to_studyFormatFragment"
                 app:destination="@id/studyFormatFragment" />
+            <action
+                android:id="@+id/action_studyFragment_to_studyingFragment"
+                app:destination="@id/studyingFragment" />
         </fragment>
 
         <!--==============================
