--- a/app/src/main/res/screens/studying/layout/layout_studying_word.xml
+++ b/app/src/main/res/screens/studying/layout/layout_studying_word.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorAccent">
+    android:background="@color/colorWhite">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/iv_image"
@@ -29,12 +29,5 @@
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@+id/iv_image" />
-
-
-    <!--    <ImageView-->
-    <!--        android:id="@+id/iv_prompt"-->
-    <!--        android:layout_width="50dp"-->
-    <!--        android:layout_height="50dp"-->
-    <!--        android:src="@drawable/ic_prompt_add" />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
