--- a/app/src/main/res/screens/studying/layout/fragment_studying.xml
+++ b/app/src/main/res/screens/studying/layout/fragment_studying.xml
@@ -22,6 +22,13 @@
             layout="@layout/layout_studying_word" />
 
         <!--==============================
+               Layout studying word next
+            ==============================-->
+        <include
+            android:id="@+id/layout_studying_word_next"
+            layout="@layout/layout_studying_word" />
+
+        <!--==============================
                Layout studying phrase
             ==============================-->
         <include
