--- a/app/src/main/res/screens/studying/layout/layout_studying_word.xml
+++ b/app/src/main/res/screens/studying/layout/layout_studying_word.xml
@@ -23,11 +23,11 @@
         android:id="@+id/tv_word"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@id/guideH_50"
         android:gravity="center"
         android:text="WORD"
         android:textSize="30sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@id/guideH_50"
         app:layout_constraintTop_toBottomOf="@+id/iv_image" />
 
     <androidx.constraintlayout.widget.Guideline
@@ -36,6 +36,13 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent=".5" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraint_answer_format"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/guideH_50" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
